tests/core/snapshots/dedupe_batch_query_execution.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(dedupe: true, port: 8000, queryValidation: false)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com") {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  posts: [Post] @http(path: "/posts?id=1")
}

type User {
  id: Int
  name: String
}
