tests/core/snapshots/default-value-config.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
input Input {
  id: Int = 1
}

type Query {
  bar(input: Input = {id: 3}): Int
  foo(input: Input!): Int
}

schema {
  query: Query
}
