tests/core/snapshots/enum-args.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

enum COLOR {
  BLUE
  GREEN
  RED
}

type Query {
  color(item: COLOR): COLOR @expr(body: "{{.args.item}}")
}
