tests/core/snapshots/federation-subgraph-force-enabled.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(enableFederation: true, port: 8000)
  @upstream(baseURL: "http://jsonplaceholder.typicode.com", batch: {delay: 100, headers: []}, httpCache: 42) {
  query: Query
}

type Post {
  id: Int!
  title: String!
}

type Query {
  """
  Apollo federation Query._service resolver
  """
  _service: _Service!
  user(id: Int!): User @http(path: "/users/{{.args.id}}")
}

type User {
  id: Int!
  name: String!
}

type _Service {
  sdl: String
}
