tests/core/snapshots/federation-subgraph-no-entities.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(batch: {delay: 100, headers: []}, httpCache: 42) @link(src: "config.yml", type: Config) {
  query: Query
}

type Post {
  id: Int!
  title: String!
}

type Query {
  user(id: Int!): User @http(url: "http://jsonplaceholder.typicode.com/users/{{.args.id}}")
}

type User {
  id: Int!
  name: String!
}
