tests/core/snapshots/graphql-conformance-010.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Location {
  lat: Int!
  lon: Int!
}

input LocationInput {
  lat: Int!
  lon: Int!
}

scalar PhoneNumber

type Point {
  id: ID!
  location: Location
  name: String!
}

type Query {
  nearby(location: LocationInput): Point
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
