tests/core/snapshots/graphql-conformance-http-002.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type BirthDay {
  day: Int!
  month: Int!
  year: Int
}

type Query {
  user(id: ID!): User!
}

type User {
  birthday: BirthDay!
  city: String
  friends: [User!]!
  id: ID!
  name: String!
}

schema {
  query: Query
}
